[package]
name = "network-cardano"
version = "0.1.0"
edition = "2024"

[dependencies]
network-csm = { path = "../network-csm" }
network-csm-tokio = { path = "../network-csm-tokio" }
network-csm-cardano-protocols = { path = "../network-csm-cardano-protocols" }
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1"
tracing-futures = "0.2"
anyhow = "1"
thiserror = "2.0.12"
cfg-if = "1.0.0"
reqwest-websocket = "0.4.4"
reqwest = "0.12.12"
futures = "0.3.31"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = { version = "1", features = [""] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
