[package]
name = "network-cardano"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
network-csm = { path = "../network-csm" }
network-csm-tokio = { path = "../network-csm-tokio" }
network-csm-cardano-protocols = { path = "../network-csm-cardano-protocols" }

# Library deps
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1"
tracing-futures = "0.2"
anyhow = "1"
thiserror = "2.0.12"
cfg-if = "1.0.0"
reqwest-websocket = "0.4.4"
reqwest = "0.12.12"
futures = "0.3.31"

[dev-dependencies]
# For running examples & tests
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.31", features = ["derive", "env"] }

# WebSocket peer-sharing demo
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Tokio features needed by examples (WS, timers, macros, multi-thread)
# NOTE: This merges additively with the lighter tokio in [dependencies].
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
