[package]
name = "network-csm-cardano-ws-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = [
    "http1",
    "tokio",
    "tracing",
    "ws",
], default-features = false }
clap = { version = "4.5.31", features = ["env", "unicode", "derive", "cargo"] }
futures = "0.3.31"
hickory-resolver = "0.24"
tokio = { version = "1.43.0", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"

network-csm = { path = "../network-csm", version = "0.1" }
tracing = "0.1.41"
tracing-futures = "0.2.5"
