[package]
name = "network-csm-tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
network-csm = { path = "../network-csm", version = "0.1" }
tokio = { version = "1", features = ["sync", "rt", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cbored = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hickory-resolver = "0.24"
